--- a/charts/open-webui/templates/workload-manager.yaml
+++ b/charts/open-webui/templates/workload-manager.yaml
@@ -184,11 +184,25 @@ spec:
       {{- else if not .Values.persistence.enabled }}
       - name: data
         emptyDir: {}
-      {{- else if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
-      - name: data
-        persistentVolumeClaim:
-          claimName: {{ include "open-webui.name" . }}
+      #{{- else if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
+      #- name: data
+      #  persistentVolumeClaim:
+      #    claimName: {{ include "open-webui.name" . }}
       {{- end }}
       {{- with .Values.volumes }}
       {{- toYaml . | nindent 6 }}
       {{- end }}
+  volumeClaimTemplates:
+    - metadata:
+        name: data
+      spec:
+        accessModes:
+          {{- range .Values.persistence.accessModes }}
+          - {{ . | quote }}
+          {{- end }}
+        resources:
+          requests:
+            storage: {{ .Values.persistence.size }}
+        {{- if .Values.persistence.storageClass }}
+        storageClassName: {{ .Values.persistence.storageClass }}
+        {{- end }}
